update for consistency_check
